🍄 lab6: new command validation